# src/routes/swagger.js
@@ -2,11 +2,6 @@ const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../../swagger.json');
 
-// Redirect root to login
-router.get('/', (req, res) => {
-  res.redirect('/api-docs');
-});
-
 router.use('/api-docs', swaggerUi.serve);
 router.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
